--- a/IT-Inventory/Web.config
+++ b/IT-Inventory/Web.config
@@ -21,6 +21,7 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <authentication mode="Windows" />
+    <customErrors mode="Off"/>
     <authorization>
       <deny users="?" />
     </authorization>
