--- a/IT-Inventory/IT-Inventory.csproj
+++ b/IT-Inventory/IT-Inventory.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
-  <Import Project="..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -44,6 +44,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ActionMailer.Net, Version=0.8.0.0, Culture=neutral, PublicKeyToken=e62db3114c02a1c2" />
+    <Reference Include="ActionMailer.Net.Mvc4, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ActionMailerNext.Mvc4.1.1.0.0\lib\net45\ActionMailer.Net.Mvc4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ActionMailer.Net.Standalone, Version=0.7.4.0, Culture=neutral, PublicKeyToken=e62db3114c02a1c2, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Bin\ActionMailer.Net.Standalone.dll</HintPath>
+    </Reference>
+    <Reference Include="ActionMailerNext, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ActionMailerNext.1.0.0.0\lib\net40\ActionMailerNext.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
       <Private>True</Private>
@@ -65,8 +78,12 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RazorEngine, Version=3.9.3.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
+      <HintPath>..\packages\RazorEngine.3.9.3\lib\net45\RazorEngine.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -138,6 +155,7 @@
     <Compile Include="Controllers\ComputersController.cs" />
     <Compile Include="Controllers\ConfigsController.cs" />
     <Compile Include="Controllers\DepartmentsController.cs" />
+    <Compile Include="Controllers\EmailController.cs" />
     <Compile Include="Controllers\HistoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ItemAttributesController.cs" />
@@ -146,59 +164,20 @@
     <Compile Include="Controllers\OfficesController.cs" />
     <Compile Include="Controllers\PeopleController.cs" />
     <Compile Include="Controllers\PrintersController.cs" />
-    <Compile Include="Controllers\SupportRequestsController.cs" />
+    <Compile Include="Controllers\SupportController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201701231248029_28.cs" />
-    <Compile Include="Migrations\201701231248029_28.Designer.cs">
-      <DependentUpon>201701231248029_28.cs</DependentUpon>
+    <Compile Include="Migrations\201704251616404_43.cs" />
+    <Compile Include="Migrations\201704251616404_43.Designer.cs">
+      <DependentUpon>201704251616404_43.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201702091034445_6.cs" />
-    <Compile Include="Migrations\201702091034445_6.Designer.cs">
-      <DependentUpon>201702091034445_6.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702171358202_29.cs" />
-    <Compile Include="Migrations\201702171358202_29.Designer.cs">
-      <DependentUpon>201702171358202_29.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201703311009390_30.cs" />
-    <Compile Include="Migrations\201703311009390_30.Designer.cs">
-      <DependentUpon>201703311009390_30.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201703311012528_31.cs" />
-    <Compile Include="Migrations\201703311012528_31.Designer.cs">
-      <DependentUpon>201703311012528_31.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704061420408_32.cs" />
-    <Compile Include="Migrations\201704061420408_32.Designer.cs">
-      <DependentUpon>201704061420408_32.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704101529045_33.cs" />
-    <Compile Include="Migrations\201704101529045_33.Designer.cs">
-      <DependentUpon>201704101529045_33.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704101659549_34.cs" />
-    <Compile Include="Migrations\201704101659549_34.Designer.cs">
-      <DependentUpon>201704101659549_34.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704140651243_35.cs" />
-    <Compile Include="Migrations\201704140651243_35.Designer.cs">
-      <DependentUpon>201704140651243_35.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704141054004_36.cs" />
-    <Compile Include="Migrations\201704141054004_36.Designer.cs">
-      <DependentUpon>201704141054004_36.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704141121017_37.cs" />
-    <Compile Include="Migrations\201704141121017_37.Designer.cs">
-      <DependentUpon>201704141121017_37.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704191215079_38.cs" />
-    <Compile Include="Migrations\201704191215079_38.Designer.cs">
-      <DependentUpon>201704191215079_38.cs</DependentUpon>
+    <Compile Include="Migrations\201704251734570_44.cs" />
+    <Compile Include="Migrations\201704251734570_44.Designer.cs">
+      <DependentUpon>201704251734570_44.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ComputerHistoryItem.cs" />
     <Compile Include="Models\Computer.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Printer.cs" />
@@ -209,7 +188,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="StaticData.cs" />
     <Compile Include="ViewModels\ComputerIndexViewModel.cs" />
+    <Compile Include="ViewModels\ComputerHistoryViewModel.cs" />
     <Compile Include="ViewModels\ComputerViewModel.cs" />
     <Compile Include="ViewModels\DepartmentViewModel.cs" />
     <Compile Include="Models\Department.cs" />
@@ -229,9 +210,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\PeopleIndexViewModel.cs" />
     <Compile Include="ViewModels\PrinterViewModel.cs" />
-    <Compile Include="StaticData.cs" />
     <Compile Include="Report.cs" />
     <Compile Include="ViewModels\ReportViewModel.cs" />
+    <Compile Include="ViewModels\SupportMailViewModel.cs" />
     <Compile Include="ViewModels\SupportRequestViewModel.cs" />
     <Compile Include="Worker.cs" />
   </ItemGroup>
@@ -332,14 +313,18 @@
     <Content Include="Views\Computers\Details.cshtml" />
     <Content Include="Views\Computers\Edit.cshtml" />
     <Content Include="Views\Computers\Index.cshtml" />
-    <Content Include="Views\SupportRequests\Create.cshtml" />
-    <Content Include="Views\SupportRequests\Delete.cshtml" />
-    <Content Include="Views\SupportRequests\Details.cshtml" />
-    <Content Include="Views\SupportRequests\EditByIt.cshtml" />
-    <Content Include="Views\SupportRequests\Index.cshtml" />
-    <Content Include="Views\SupportRequests\EditByUser.cshtml" />
-    <Content Include="Views\SupportRequests\Finish.cshtml" />
-    <Content Include="Views\SupportRequests\Modifications.cshtml" />
+    <Content Include="Views\Support\Create.cshtml" />
+    <Content Include="Views\Support\Delete.cshtml" />
+    <Content Include="Views\Support\Details.cshtml" />
+    <Content Include="Views\Support\EditByIt.cshtml" />
+    <Content Include="Views\Support\Index.cshtml" />
+    <Content Include="Views\Support\EditByUser.cshtml" />
+    <Content Include="Views\Support\Finish.cshtml" />
+    <Content Include="Views\Support\Modifications.cshtml" />
+    <Content Include="Views\Computers\HistoryIndex.cshtml" />
+    <Content Include="Views\Computers\HistoryDetails.cshtml" />
+    <Content Include="Views\Email\Email.html.cshtml" />
+    <Content Include="Views\Computers\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -348,41 +333,11 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201701231248029_28.resx">
-      <DependentUpon>201701231248029_28.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704251616404_43.resx">
+      <DependentUpon>201704251616404_43.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702091034445_6.resx">
-      <DependentUpon>201702091034445_6.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702171358202_29.resx">
-      <DependentUpon>201702171358202_29.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201703311009390_30.resx">
-      <DependentUpon>201703311009390_30.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201703311012528_31.resx">
-      <DependentUpon>201703311012528_31.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704061420408_32.resx">
-      <DependentUpon>201704061420408_32.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704101529045_33.resx">
-      <DependentUpon>201704101529045_33.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704101659549_34.resx">
-      <DependentUpon>201704101659549_34.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704140651243_35.resx">
-      <DependentUpon>201704140651243_35.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704141054004_36.resx">
-      <DependentUpon>201704141054004_36.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704141121017_37.resx">
-      <DependentUpon>201704141121017_37.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704191215079_38.resx">
-      <DependentUpon>201704191215079_38.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704251734570_44.resx">
+      <DependentUpon>201704251734570_44.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
@@ -417,8 +372,8 @@
     <PropertyGroup>
       <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
