--- a/IT-Inventory/IT-Inventory.csproj
+++ b/IT-Inventory/IT-Inventory.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.4\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.4\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" />
-  <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -49,9 +49,9 @@
       <HintPath>..\packages\ActionMailerNext.Mvc4.1.1.0.0\lib\net45\ActionMailer.Net.Mvc4.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ActionMailer.Net.Standalone, Version=0.7.4.0, Culture=neutral, PublicKeyToken=e62db3114c02a1c2, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Bin\ActionMailer.Net.Standalone.dll</HintPath>
+    <Reference Include="ActionMailer.Net.Standalone, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ActionMailerNext.Standalone.1.1.0.0\lib\net40\ActionMailer.Net.Standalone.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="ActionMailerNext, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ActionMailerNext.1.0.0.0\lib\net40\ActionMailerNext.dll</HintPath>
@@ -73,8 +73,8 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
+    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.4\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
@@ -168,19 +168,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704251616404_43.cs" />
-    <Compile Include="Migrations\201704251616404_43.Designer.cs">
-      <DependentUpon>201704251616404_43.cs</DependentUpon>
+    <Compile Include="Migrations\201706061240474_50.cs" />
+    <Compile Include="Migrations\201706061240474_50.Designer.cs">
+      <DependentUpon>201706061240474_50.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704251734570_44.cs" />
-    <Compile Include="Migrations\201704251734570_44.Designer.cs">
-      <DependentUpon>201704251734570_44.cs</DependentUpon>
+    <Compile Include="Migrations\201706061243146_51.cs" />
+    <Compile Include="Migrations\201706061243146_51.Designer.cs">
+      <DependentUpon>201706061243146_51.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ComputerHistoryItem.cs" />
     <Compile Include="Models\Computer.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Printer.cs" />
+    <Compile Include="Models\SentMail.cs" />
+    <Compile Include="Models\SupportFile.cs" />
     <Compile Include="Models\SupportRequest.cs" />
     <Compile Include="Pager.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -323,8 +325,10 @@
     <Content Include="Views\Support\Modifications.cshtml" />
     <Content Include="Views\Computers\HistoryIndex.cshtml" />
     <Content Include="Views\Computers\HistoryDetails.cshtml" />
-    <Content Include="Views\Email\Email.html.cshtml" />
-    <Content Include="Views\Computers\View.cshtml" />
+    <Content Include="Views\Email\SupportEmail.html.cshtml" />
+    <Content Include="Views\People\Delete.cshtml" />
+    <Content Include="Views\Email\UrgentItems.html.cshtml" />
+    <Content Include="Views\Support\IndexPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -333,11 +337,11 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201704251616404_43.resx">
-      <DependentUpon>201704251616404_43.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706061240474_50.resx">
+      <DependentUpon>201706061240474_50.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704251734570_44.resx">
-      <DependentUpon>201704251734570_44.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706061243146_51.resx">
+      <DependentUpon>201706061243146_51.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
@@ -372,8 +376,8 @@
     <PropertyGroup>
       <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.4\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.4\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
