--- a/IT-Inventory/packages.config
+++ b/IT-Inventory/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ActionMailerNext" version="1.0.0.0" targetFramework="net461" />
   <package id="ActionMailerNext.Mvc4" version="1.1.0.0" targetFramework="net461" />
+  <package id="ActionMailerNext.Standalone" version="1.1.0.0" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AspNet.ScriptManager.jQuery" version="3.1.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
@@ -17,7 +18,7 @@
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.4" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
